syntactic order. The original order of occurrences may be recovered as
well, e.g. via TFrees.list_set.

* Thm.instantiate, Thm.generalize and related operations require
scalable datastructures from structure TVars, Vars, Names etc.
INCOMPATIBILITY: e.g. use TVars.empty and TVars.make for immediate
adoption; better use TVars.add, TVars.add_tfrees etc. for scalable
accumulation of items.

* The "build" combinators of various data structures help to build
content from bottom-up, by applying an "add" function the "empty" value.
For example:

  - type 'a Symtab.table etc.: build
  - type 'a Names.table etc.: build
  - type 'a list: build and build_rev
  - type Buffer.T: build and build_content

For example, see src/Pure/PIDE/xml.ML:

  val content_of = Buffer.build_content o fold add_content;

* ML antiquotations \<^try>\<open>expr\<close> and \<^can>\<open>expr\<close> operate directly on
the given ML expression, in contrast to functions "try" and "can" that
modify application of a function.

* ML antiquotations for conditional ML text:

    \<^if_linux>\<open>...\<close>
    \<^if_macos>\<open>...\<close>
    \<^if_windows>\<open>...\<close>
    \<^if_unix>\<open>...\<close>

* External bash processes are always managed by Isabelle/Scala, in
contrast to Isabelle2021 where this was only done for macOS on Apple
Silicon.

The main Isabelle/ML interface is Isabelle_System.bash_process with
result type Process_Result.T (resembling class Process_Result in Scala);
derived operations Isabelle_System.bash and Isabelle_System.bash_output
provide similar functionality as before. Rare INCOMPATIBILITY due to
subtle semantic differences:

  - Processes invoked from Isabelle/ML actually run in the context of
    the Java VM of Isabelle/Scala. The settings environment and current
    working directory are usually the same on both sides, but there can be
    subtle corner cases (e.g. unexpected uses of "cd" or "putenv" in ML).
